@@ -1,7 +1,8 @@
 === (next) ===
 NEW: more verbose spec constraints mismatch
 NEW: 'data' type from FTN3 v1.9
-NEW: 'BinaryFormat' type from FTN3 v1.9
+NEW: 'BinaryData' type from FTN3 v1.9
+NEW: FTN3.1 spec is available under specs/ folder now
 
 === 1.7.7 (2018-01-12) ===
 FIXED: to compare legacy HMAC with protection from timining attacks
